# de600

./: README.md  Terms of Service.HTML  how --name-only HEAD  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  polygon-endpoint-test.js  polygon-stress-test-report.json  polygon-stress-test.js  prisma.config.ts  push_changes.bat  pyproject.toml  render.yaml  requirements-python.txt  tatus --porcelain  test-ai-chat.js  test-backtesting-api.js  test-polygon-api.js  tsconfig.json
Screener/: package-lock.json  package.json
backtest_validation_results/: validation_report_20250904_121911.json  validation_report_20250916_204137.json  validation_report_20250916_204221.json  validation_report_20250916_204228.json  validation_report_20250918_071313.json  validation_report_20250927_180343.json  validation_report_20250927_183117.json  validation_report_20250927_183156.json  validation_report_20250927_183209.json  validation_report_20250927_183228.json  validation_report_20251016_213229.json  validation_report_20251016_213252.json  validation_report_20251016_213307.json  validation_report_20251016_214341.json  validation_report_20251016_214439.json  validation_report_20251016_215116.json  validation_report_20251016_215155.json  validation_report_20251016_215448.json  validation_report_20251016_215516.json  validation_report_20251021_180754.json
market page working/: .gitignore  .replit  README.md  package-lock.json  package.json  tailwind.config.ts
pages/: 404.tsx  _document.js
prisma/: schema.prisma
scripts/: cleanup-verification-codes.js  (+9 more)
(+402 files in other folders)
