[tool.poetry]
name = "trading-platform"
version = "0.1.0"
description = "Trading Platform Python Dependencies"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.2.28"
requests = "^2.31.0"
pandas = "^2.1.4"
numpy = "^1.24.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
